Fixed modal issue and alignment

--- a/css/mobile.style.css
+++ b/css/mobile.style.css
@@ -84,10 +84,10 @@ Top Carousel
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 43rem;
+  height: 37rem;
   justify-content: center;
-  gap: 3rem;
   padding: 1rem;
+  gap: 2rem;
 }
 .mobile-tailor-img-1 {
   width: 16rem;
@@ -206,6 +206,7 @@ Top Carousel
   height: auto;
   background: #f7f7fbcf;
   padding: 5rem;
+  padding-bottom: 1.7rem;
   font-size: 15px;
 }
 
@@ -307,6 +308,10 @@ Top Carousel
   max-width: 22.5rem;
   height: 25rem;
   background: #363ba1 !important;
+}
+.modal {
+  left: 24px !important;
+  top: 40px !important;
 }
 .mobile-modal-form-input {
   width: 17rem;
